--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,5 @@
 [build]
   # Use pnpm if your project uses pnpm (you can change to "npm run build" or "yarn build" if needed)
   command = "pnpm build"
-  # The Netlify Next.js plugin produces a Next-compatible output under .output/public
-  publish = ".output/public"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  # This project builds a static export into `out` (because `next.config.mjs` uses `output: 'export'`)
+  publish = "out"
